<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemBackdrop"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/film_poster"
        android:src="@drawable/movie_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="100dp"
        android:layout_height="135dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/imageposter"
        android:src="@drawable/movie_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemBackdrop" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemBackdrop" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/released"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/itemImage"
        app:layout_constraintStart_toStartOf="@+id/itemImage"
        app:layout_constraintTop_toBottomOf="@+id/itemImage" />

    <TextView
        android:id="@+id/releaseDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/genre"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateTv" />

    <TextView
        android:id="@+id/genreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTv" />

    <TextView
        android:id="@+id/durationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnTrailer"
        app:layout_constraintStart_toStartOf="@+id/btnTrailer" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exampleGenre"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTrailer"
        app:layout_constraintStart_toEndOf="@+id/durationTv" />

    <Button
        android:id="@+id/btnTrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/trailer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="@+id/btnTrailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemBackdrop" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_false"
        app:backgroundTint="@color/black_200"
        app:layout_constraintBottom_toTopOf="@+id/btnTrailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/itemImage"
        app:layout_constraintTop_toBottomOf="@+id/itemImage"
        app:layout_constraintVertical_bias="0.945" />


</androidx.constraintlayout.widget.ConstraintLayout>