<resources>
    <string name="app_name">MyMovieList</string>
    <string name="movies">Movies</string>
    <string name="tvShows">Tv Shows</string>
    <string name="released">Release Date</string>
    <string name="genre">Genre</string>
    <string name="season">Season</string>
    <string name="overview">Overview</string>
    <string name="film_poster">Film Poster</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="trailer">Trailer</string>
    <string name="imageposter">imagePoster</string>
    <string name="movieverse">MovieVerse</string>
    <string name="exampleGenre">42 Minutes</string>
    <string name="duration">Duration:</string>
    <string name="favorite">Favorite</string>
    <string name="error">error</string>
    <string name="movieLogo">Movie Logo</string>
</resources>